fix typo in seminorm definition

--- a/lectures/emp_process/emp_process.tex
+++ b/lectures/emp_process/emp_process.tex
@@ -57,7 +57,7 @@ Throughout, we're going to assume that $J$ is a seminorm acting on a vector
 space of functions. Recall, this means that it satisfies the following three
 properties, for all $f,g$ in its domain and $a \in \R$: 
 \begin{enumerate}
-\item $J(f+g) \leq J(a) + J(g)$;
+\item $J(f+g) \leq J(f) + J(g)$;
 \item $J(af) = |a| J(f)$;
 \item $J(f) \geq 0$.
 \end{enumerate}
