--- a/lectures/minimax/minimax.tex
+++ b/lectures/minimax/minimax.tex
@@ -609,7 +609,7 @@ where we abbreviate $[r] = \{1,\dots,r\}$. Let $h=1/(2r)$ and define the functio
 g_\alpha(x) = Lh K \bigg( \frac{x - x_\alpha}{h} \bigg), \quad \text{for $\alpha
   \in [r]^d$}.
 \]
-It is straightforward to check that each $f_\alpha$ is $L$-Lipschitz, and that
+It is straightforward to check that each $g_\alpha$ is $L$-Lipschitz, and that
 they have non-overlapping supports. Now just enumerate these functions as
 $g_1,\dots,g_m$, for $m = r^d$, and define  
 \[
