--- a/lectures/splines_rkhs/splines_rkhs.tex
+++ b/lectures/splines_rkhs/splines_rkhs.tex
@@ -1348,7 +1348,7 @@ kernels, as given in \eqref{eq:ss_rkhs} and \eqref{eq:tp_rkhs}, to ``reproduce''
 (no pun in intended) smoothing splines and thin plate splines. 
 
 % RJT note: this is kind of cheating, but by putting it in quotes, I feel as if
-% I'm being % sufficiently vague about what the actual equivalence is. 
+% I'm being sufficiently vague about what the actual equivalence is. 
 
 \subsection{Representer theorem}
 
