No t in Schwarz

--- a/lectures/emp_process/emp_process.tex
+++ b/lectures/emp_process/emp_process.tex
@@ -437,7 +437,7 @@ uniformly over all $f \in \cF$ with $\|f\|_n \leq \rho$, we have
 {\sqrt n}, 
 \]
 with high probability. Now think about what a simple application of
-Cauchy-Schwartz would give us: 
+Cauchy-Schwarz would give us: 
 \[
 |\langle \epsilon, f \rangle_n| \leq \|\epsilon\|_n \|f\|_n \leq c \|f\|_n, 
 \]
@@ -449,7 +449,7 @@ the second-to-last display is better than the last display when
 \frac{\|f\|_n^{-w/2}}{\sqrt n} \leq 1 \iff \|f\|_n \geq n^{-1/w}.
 \]
 That is, except for functions $f$ of really small empirical norm, we improve on
-Cauchy-Schwartz, and dramatically so when $f$ is of larger empirical norm. For
+Cauchy-Schwarz, and dramatically so when $f$ is of larger empirical norm. For
 example, when \smash{$\|f\|_n = n^{-1/(2+w)}$} (this is not an arbitrarily
 chosen rate, you'll see why we're interested in this a bit later, when we do the
 error analyis), then the ``speedup'' we get from \eqref{eq:sg_complexity} is:   
@@ -713,7 +713,7 @@ important because it will be enable us to apply Lemma
 \|\epsilon\|_n^2 \leq 5\sigma^2,
 \]
 on an event $\Omega_1$ with probability at least $1-\exp(-n)$. Thus returning to 
-\eqref{eq:basic_ineq_v1}, using Cauchy-Schwartz and the above bound, we have on
+\eqref{eq:basic_ineq_v1}, using Cauchy-Schwarz and the above bound, we have on
 $\Omega_1$, 
 \begin{align*}
 \|\hf-f_0\|_n^2 &\leq 10\sigma^2 \|\hf-f_0\|_n + \lambda (J_0^v - {\hat J}^v) \\ 
