--- a/homeworks/homework2/homework2.tex
+++ b/homeworks/homework2/homework2.tex
@@ -62,7 +62,7 @@ In this exercise, we will work out some facts about RKHS regression.
   \]
   and
   \[
-  \|h\|_\cH \geq \|f\|_\cH, \quad \text{with equality iff $h=0$}. 
+  \|f + h\|_\cH \geq \|f\|_\cH, \quad \text{with equality iff $h=0$}. 
   \]
 
 \item Argue that for any $\lambda > 0$, the infinite-dimensional RKHS
