No point specification
- Remove specification of how many bonus points Q4 is. This is for
  consistency. No other bonus problems say how many points it will
  be. It can be left up to Seunghoon as the grader.

--- a/homeworks/homework1/homework1.tex
+++ b/homeworks/homework1/homework1.tex
@@ -403,7 +403,7 @@ In this exercise, we will analyze the risk of wavelet denoising.
   with a slightly finer analysis).
 \end{enumerate}
 
-\section{Bonus: minimax lower bounds for H{\"o}lder classes [8 points]}  
+\section{Bonus: minimax lower bounds for H{\"o}lder classes}
 
 This is an optional bonus problem. Consider the $d$-dimensional H{\"o}lder ball    
 \[
@@ -431,11 +431,9 @@ c n^{-2k/(2k+d)}.
 To be clear, here \smash{$\|g\|_2^2 = \int_{[0,1]^d} g(x)^2 \, dx$}. Make sure
 to write the full calculation from start to finish (even detailing the steps
 that may be analogous to those in lecture).
-\marginpar{\small [7 pts]}
 
 Explain why this certifies that the upper bound given in the last question for
 estimation over a univariate TV ball is rate optimal (ignoring log factors). 
-\marginpar{\small [1 pt]}
 
 \bibliographystyle{plainnat}
 \bibliography{../../common/ryantibs}
