fitted values should be KSY
Per equation under eq (17) in RKHS notes, S = (K + \lambda I)^{-1}, but the fitted value should really be K (K + \lambda I)^{-1} Y

--- a/homeworks/homework2/homework2.tex
+++ b/homeworks/homework2/homework2.tex
@@ -97,7 +97,7 @@ In this exercise, we will work out some facts about RKHS regression.
   \frac{1}{n} \sum_{i=1}^n \bigg(\frac{y_i - \hf(x_i)}{1-S_{ii}}\bigg)^2,
   \]
   where $S=(K + \lambda I)^{-1}$ is the smoother matrix for the RKHS estimator
-  (so that the vector of fitted values is given by \smash{$\hat{Y} = SY$}). 
+  (so that the vector of fitted values is given by \smash{$\hat{Y} = KSY$}). 
 
   Hint: prove that for each $i$,
   \[
