Fix RKHS smoother matrix S
- As pointed out by @XuedaShen in #4, the RKHS smoother matrix is
  S = K (K + \lambda I)^{-1}

--- a/homeworks/homework2/homework2.tex
+++ b/homeworks/homework2/homework2.tex
@@ -96,7 +96,7 @@ In this exercise, we will work out some facts about RKHS regression.
   \frac{1}{n} \sum_{i=1}^n (y_i - \hf^{-i}(x_i))^2 = 
   \frac{1}{n} \sum_{i=1}^n \bigg(\frac{y_i - \hf(x_i)}{1-S_{ii}}\bigg)^2,
   \]
-  where $S=(K + \lambda I)^{-1}$ is the smoother matrix for the RKHS estimator
+  where $S=K(K + \lambda I)^{-1}$ is the smoother matrix for the RKHS estimator 
   (so that the vector of fitted values is given by \smash{$\hat{Y} = SY$}). 
 
   Hint: prove that for each $i$,
@@ -377,7 +377,6 @@ on $\gamma$.
   + \lambda I)^{-2} \Sigma + \hSigma ( \hSigma + \lambda I)^{-2} \Sigma \big].
   \]
 \end{enumerate}
-
 
 \bibliographystyle{plainnat}
 \bibliography{../../common/ryantibs}
