--- a/lectures/lasso/lasso.tex
+++ b/lectures/lasso/lasso.tex
@@ -3,7 +3,7 @@
 \def\ParSkip{} 
 \input{../../common/ryantibs}
 
-\title{High-Dimensional Regression: The Lasso \\ \smallskip
+\title{High-Dimensional Regression: Lasso \\ \smallskip
 \large Advanced Topics in Statistical Learning, Spring 2023 \\ \smallskip
 Ryan Tibshirani}
 \date{}
