--- a/lectures/lasso/lasso.tex
+++ b/lectures/lasso/lasso.tex
@@ -833,7 +833,7 @@ This produces similar results as in \eqref{eq:risk_lasso_fast1},
 \eqref{eq:risk_lasso_fast2}, but instead of the latter we get a coefficient
 bound in the $\ell_2$ norm, of the form
 \[
-\|\hbeta-\beta_0\|_2^2 \lesssim \frac{s_0 \log d}{n \phi_0^4}. 
+\|\hbeta-\beta_0\|_2^2 \lesssim \frac{s_0 \log d}{\phi_0^4 n}. 
 \]
 with high probability. Notice the similarity between \eqref{eq:restricted_eigen} 
 and \eqref{eq:compatibility}. The restricted eigenvalue condition is actually
